--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>AngularJS Basic HTTP Authentication Example</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+   
   </head>
 
   <body>
@@ -12,6 +13,8 @@
     <div class="">
       <div class="container">
         <div class="col-xs-offset-2 col-xs-8">
+        
+        <div>Hello</div>
           <div ng-view></div>
         </div>
       </div>
@@ -22,8 +25,8 @@
     <script src="//code.angularjs.org/1.2.20/angular-route.js"></script>
     <script src="//code.angularjs.org/1.2.13/angular-cookies.js"></script>
     
-    <script src="static/app.js"></script>
-    <script src="static/js/service/service.js"></script>
-    <script src="static/js/controller/controller.js"></script>
+    <script src="app/js/app.js"></script>
+    <script src="app/js/service/service.js"></script>
+    <script src="app/js/controller/controller.js"></script>
   </body>
 </html>
